 * Added view all projects capability.
 * Added support to move bugs from one project to another.
 * Added email check to admin_check.php3
 * Added a check to make sure the cookie_string really is unique.
 * Added a check for a duplciate user in the manage create user page.
 * Added Romanian translation.
 * Added g_allow_account_delete global to prevent self account deletion.
 * Removed site_settings pages.
 * Removed unused cookie variables.
 * Removed sql_to_unix_time() function.  Unecessary with removal of TIMESTAMPS.
 * Removed menu_inc.php file and related variable.  Moved this into print_menu().
 * Removed print_mantis_version().  Moved it into print_foooter().
 * Removed some unused code.
 * Removed get_project_name() function.  Replaced with a more general get_project_field().
 * Renamed g_store_file_to to g_file_upload_method.
 * Renamed files to .php
 * Removed admin_cookiecheck.php3
 * Moved documents into doc/ subdirectory.
 * Moved language files into lang/ subdirectory.

12.01.2001  -   0.16.1

 * Fixed SQL error when reporting bug in a private project.
 * Fixed problem where upgrade scripts were not executed for 0.16.0 upgrade.
 * Fixed problem with $g_limit_reporters limiting all users instead of just reporters and below
 * Modified admin_check.php3 to be more informative and useful.
 * Modified upgrade script to preserve timestamp fields.
 * Modified db_generate to enable projects by default.
 * Modified account_page.php3 to remove EOF usage.
 * Updated upgrade script to be more informative.
 * Updated French localization.
 * Added $g_allow_close_immediately to toggle "close immediately" option when resolving a bug.

11.27.2001  -   0.16.0

 * Fixed minor HTML errors in core_html_API.php.
 * Fixed the view, report, and update pages to honor the forces advanced/simple modes.
 * Fixed problem with extra br tags being inserted in project descriptions
 * Fixed table names in the proj_doc_* pages to use variables instead of hardcoded names.