@@ -18,6 +18,19 @@
 	db_connect( $g_hostname, $g_db_username, $g_db_password, $g_database_name );
 	check_access( REPORTER );
 
+	if ( is_uploaded_file( $f_file ) ) {
+		$query = "SELECT file_path
+				FROM $g_mantis_project_table
+				WHERE id='$g_project_cookie_val'";
+		$result = db_query( $query );
+		$t_file_path = db_result( $result );
+
+		if ( !file_exists( $t_file_path ) ) {
+			echo $MANTIS_ERROR[ERROR_NO_DIRECTORY];
+			exit;
+		}
+	}
+
 	# We check to see if the variable exists to avoid warnings
 
 	if ( !isset( $f_steps_to_reproduce ) ) {
@@ -150,16 +163,16 @@
 			switch ( $g_file_upload_method ) {
 				case DISK:	umask( 0333 );  # make read only
 							copy($f_file, $t_file_path.$f_file_name);
-							$query = "INSERT INTO mantis_project_file_table
-									(id, project_id, title, description, diskfile, filename, folder, filesize, file_type, date_added, content)
+							$query = "INSERT INTO $g_mantis_bug_file_table
+									(id, bug_id, title, description, diskfile, filename, folder, filesize, file_type, date_added, content)
 									VALUES
-									(null, $g_project_cookie_val, '$f_title', '$f_description', '$t_file_path$f_file_name', '$f_file_name', '$t_file_path', $t_file_size, '$f_file_type', NOW(), '')";
+									(null, $t_bug_id, '', '', '$t_file_path$f_file_name', '$f_file_name', '$t_file_path', $t_file_size, '$f_file_type', NOW(), '')";
 				case DATABASE:
 							$t_content = addslashes( fread ( fopen( $f_file, "r" ), $t_file_size ) );
-							$query = "INSERT INTO mantis_project_file_table
-									(id, project_id, title, description, diskfile, filename, folder, filesize, file_type, date_added, content)
+							$query = "INSERT INTO $g_mantis_bug_file_table
+									(id, bug_id, title, description, diskfile, filename, folder, filesize, file_type, date_added, content)
 									VALUES
-									(null, $g_project_cookie_val, '$f_title', '$f_description', '$t_file_path$f_file_name', '$f_file_name', '$t_file_path', $t_file_size, '$f_file_type', NOW(), '$t_content')";
+									(null, $t_bug_id, '', '', '$t_file_path$f_file_name', '$f_file_name', '$t_file_path', $t_file_size, '$f_file_type', NOW(), '$t_content')";
 			}
 			$result = db_query( $query );
 		}
